welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: expected class or object definition
def posFinale() {
^SnakeBuggle:28: error: expected class or object definition
def avanceCommeSerpent() {
^SnakeBuggle:36: error: Unmatched closing brace '}' ignored here
}
^